--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "benchmark",
     "client",
     "client/libra_wallet",
+    "client/iosTest",
     "common/bounded-executor",
     "common/canonical_serialization",
     "common/crash_handler",
