--- a/client/iosTest/Cargo.toml
+++ b/client/iosTest/Cargo.toml
@@ -11,6 +11,9 @@ libra_wallet = { path = "../libra_wallet" }
 sha3 = "0.8.2"
 sha2 = "0.8.0"
 rust-crypto = "0.2"
+byteorder = "1.3.2"
+[dependencies.ed25519-dalek]
+version = "1.0.0-pre.1"
 
 [dependencies.libra_crypto]
 path = "../../crypto/crypto"
