--- a/client/iosTest/Cargo.toml
+++ b/client/iosTest/Cargo.toml
@@ -12,8 +12,12 @@ sha3 = "0.8.2"
 sha2 = "0.8.0"
 rust-crypto = "0.2"
 byteorder = "1.3.2"
+types = { path = "../../types" }
+hex = "0.3"
 [dependencies.ed25519-dalek]
 version = "1.0.0-pre.1"
+
+types = { path = "./../types" }
 
 [dependencies.libra_crypto]
 path = "../../crypto/crypto"
